--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
 		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^11.2.5",
 		"@testing-library/user-event": "^12.8.3",
+		"i18next": "^21.5.3",
+		"i18next-browser-languagedetector": "^6.1.2",
+		"i18next-http-backend": "^1.3.1",
+		"js-cookie": "^3.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^11.14.3",
 		"react-icons": "^4.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
